# Client-Aided-PPML

./: .gitignore  README.md  build.sh  env_setup.sh
benchmarks/SecureML/: CMakeLists.txt  client.cpp  linear.cpp  logistic.cpp  utils.hpp
benchmarks/SecureML/offline/dgk/: dgkmt.cpp
benchmarks/SecureML/offline/ot/: otmt_2op.cpp
benchmarks/client-aided_SecureML/: CMakeLists.txt  linear-client.cpp  linear.cpp  logistic-client.cpp  logistic.cpp  network_setup.sh
benchmarks/client-aided_SecureML_NN/: CMakeLists.txt  Division.cpp  Layer.hpp  MT.cpp  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork.hpp  ReLU.hpp  client-aided.cpp  defines.hpp  main-client.cpp  main-server.cpp  secondary.hpp
malicious_NN/: CMakeLists.txt  Layer.hpp  Layer1_Client.hpp  Layer1_Server.hpp  Layer_Client.hpp  Layer_Server.hpp  Layerc.hpp  NN_Client.hpp  NN_Server.hpp  main-client.cpp  main-server.cpp  utils.hpp
malicious_linear_logistic/: CMakeLists.txt  linear-client.cpp  linear.cpp  logistic-client.cpp  logistic.cpp  utils.hpp
semi-honest_NN/: CMakeLists.txt  Layer.hpp  Layer1_Client.hpp  Layer1_Server.hpp  Layer_Client.hpp  Layer_Server.hpp  Layerc.hpp  NN_Client.hpp  NN_Server.hpp  main-client.cpp  main-server.cpp  utils.hpp
semi-honest_linear_logistic/: CMakeLists.txt  linear-client.cpp  linear.cpp  logistic-client.cpp  logistic.cpp  utils.hpp
